# not-cursor-cloud

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  Justfile  LICENSE  README.md  SECURITY.md  mise.toml  package.json  pyproject.toml  typos.toml  versions.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
ansible/: ansible.cfg  playbook.yml
ansible/group_vars/: all.yml
ansible/inventory/: hosts.example.yml
ansible/roles/agent_clis/tasks/: main.yml
ansible/roles/agent_user/tasks/: main.yml
ansible/roles/base/tasks/: main.yml
ansible/roles/cliproxyapi/handlers/: main.yml
ansible/roles/cliproxyapi/tasks/: main.yml
ansible/roles/cliproxyapi/templates/: cliproxyapi.service.j2  config.yaml.j2
ansible/roles/github_cli/tasks/: main.yml
ansible/roles/herdr/tasks/: main.yml
ansible/roles/mise/tasks/: main.yml
ansible/roles/nodejs/tasks/: main.yml
ansible/roles/security/handlers/: main.yml
ansible/roles/security/tasks/: main.yml
ansible/roles/t3code/handlers/: main.yml
ansible/roles/t3code/tasks/: main.yml
ansible/roles/t3code/templates/: t3code.service.j2
ansible/roles/tailscale/tasks/: main.yml
scripts/: bootstrap.sh  check-availability.sh  doctor.sh  smoke-test.sh  update-inventory.sh
tofu/: cloud-init.yaml.tftpl  main.tf  outputs.tf  variables.tf
